--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-prompt-android": "^1.1.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-snap-carousel": "4.0.0-beta.6",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@types/jest": "^26.0.23",
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.6",
+    "@types/react-native-snap-carousel": "^3.8.5",
     "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
